<resources>
    <string name="app_name">News</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="filters">Filters</string>
    <string name="defaulttext">NO ARTICLES</string>
    <string name="imagedes">IMAGE</string>
    <string name="action_title">NEWS</string>
    <string name="language">LANGUAGE</string>
    <string name="hindi">HINDI</string>
    <string name="english">ENGLISH</string>
    <string name="country">COUNTRY</string>
    <string name="india">INDIA</string>
    <string name="united_state">UNITED STATE</string>
    <string name="singapore">SINGAPORE</string>
    <string name="australia">AUSTRALIA</string>
    <string name="pakistan">PAKISTAN</string>
    <string name="category">CATEGORY</string>
    <string name="breaking_news">BREAKING NEWS</string>
    <string name="world">WORLD</string>
    <string name="nation">NATION</string>
    <string name="business">BUSINESS</string>
    <string name="sports">SPORTS</string>
    <string name="technology">TECHNOLOGY</string>
    <string name="science">SCIENCE</string>
    <string name="general">GENERAL</string>
    <string name="health">HEALTH</string>
    <string name="entertainment">ENTERTAINMENT</string>
    <string name="topsplash">NEWS</string>
    <string name="be_update">BE UPDATED</string>
    <string name="image_logo">IMAGE LOGO</string>
</resources>